# objr

./: README.rst  pyproject.toml
examples/: cmd.py  rss.py  thr.py
mods/: __init__.py  cmd.py  err.py  irc.py  log.py  mod.py  req.py  rss.py  tdo.py  thr.py  upt.py
objr/: __init__.py  cache.py  config.py  event.py  reactor.py  thread.py
objr/modules/: irc.py
objt/: errors.py
objz/: __init__.py  client.py  console.py
