[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "objr"
description = "objects runtime"
version = "152"
authors = [
    {name = "Bart Thate", email = "rssbotd@gmail.com"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/rssbotd/objr"
"bugs" = "https://github.com/rssbotd/objr/issues"
"source" = "https://github.com/rssbotd/objr"


[tool.setuptools]
packages = [
    'objr',
]
zip-safe=true


[tool.setuptools.data-files]
"share/doc/objr" = [
    "README.rst"
]

[tool.setuptools.exclude-package-data]
"*" = [
       "env*",
       "html*",
       "test*"
      ]
